2005-03-02  David Moore  <dcm@acm.org>

	* iptc-dataset.h: Fixed copyright notice

2005-02-28  David Moore  <dcm@acm.org>

	* Initial version
